--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=teste
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/cadastros
 spring.datasource.username=postgres
-spring.datasource.password=murphy123
+spring.datasource.password=postgres
 
 # default 30 minutos = 1800 segundos
 api.security.token.secondsexpiry=1800
